Update gitignore to add VS 2015
Update gitignore adding Visual Studio 2015 files types to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,20 @@
 *.exe
 *.out
 *.app
+
+# Other Visual Studio files
+*.user
+*.suo
+*.aps
+*.log
+*.tlog
+*.exp
+*.ncb
+*.res
+*.sdf
+*.lastbuildstate
+*.ipsh
+*.idb
+*.pdb
+*.db
+RC*.
