--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -52,7 +52,7 @@
     <OutDir>$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);..\DDrawCompat\v0.2.1;..\DxWnd\v2_03_60_src\Include;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);DDrawCompat\v0.2.1;DxWnd\v2_03_60_src\Include;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\lib.X86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -168,40 +168,40 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatDirectDraw.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatDirectDrawSurface.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdi.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiCaret.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiDc.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiDcCache.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiDcFunctions.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiPaintHandlers.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiScrollBar.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiScrollFunctions.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiTitleBar.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatGdiWinProc.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatPaletteConverter.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatPrimarySurface.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\CompatRegistry.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\DDrawLog.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\DDrawProcs.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\DDrawRepository.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\DllMainCompat.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\Hook.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\IReleaseNotifier.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\RealPrimarySurface.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\Time.cpp" />
-    <ClCompile Include="..\DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp" />
-    <ClCompile Include="..\DxWnd\v2_03_60_src\proxy\init.cpp" />
     <ClCompile Include="cfg.cpp" />
     <ClCompile Include="d3d8to9\d3d8to9.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDraw.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawSurface.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdi.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiCaret.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDc.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDcCache.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDcFunctions.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiPaintHandlers.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiScrollBar.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiScrollFunctions.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiTitleBar.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiWinProc.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatPaletteConverter.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatPrimarySurface.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\CompatRegistry.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\DDrawLog.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\DDrawProcs.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\DDrawRepository.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\DllMainCompat.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\Hook.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\IReleaseNotifier.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\RealPrimarySurface.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\Time.cpp" />
+    <ClCompile Include="DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp" />
     <ClCompile Include="disasm\cmdlist.c" />
     <ClCompile Include="disasm\Disasm.c" />
     <ClCompile Include="disasm\initdisasm.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="dsound\dsound_hook.cpp" />
+    <ClCompile Include="DxWnd\v2_03_60_src\proxy\init.cpp" />
     <ClCompile Include="dxwrapper.cpp" />
     <ClCompile Include="fullscreen.cpp" />
     <ClCompile Include="hook\hotpatch.cpp" />
@@ -220,7 +220,6 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
     <None Include="dxwrapper.def" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\DDrawCompat\v0.2.1\DDrawLog.h" />
     <ClInclude Include="d3d8to9\d3d8to9.hpp" />
     <ClInclude Include="d3d8to9\d3d8types.h" />
     <ClInclude Include="dgame.h" />
