--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -52,7 +52,7 @@
     <OutDir>$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir);DDrawCompat\v0.2.1;DxWnd\v2_03_60_src\Include;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir);DDrawCompat\v0.2.1;DxWnd\v2_03_60_src\Include;d3d8to9;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files %28x86%29\Microsoft Research\Detours Express 3.0\lib.X86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -148,7 +148,7 @@
       <DataExecutionPrevention />
       <ImportLibrary />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>dxguid.lib;detours.lib;msimg32.lib;oleacc.lib;uxtheme.lib;dwmapi.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d9.lib;d3dx9.lib;dxguid.lib;detours.lib;msimg32.lib;oleacc.lib;uxtheme.lib;dwmapi.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
@@ -170,6 +170,15 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
   <ItemGroup>
     <ClCompile Include="cfg.cpp" />
     <ClCompile Include="d3d8to9\d3d8to9.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_base.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_device.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_index_buffer.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_surface.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_swap_chain.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_texture.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_vertex_buffer.cpp" />
+    <ClCompile Include="d3d8to9\d3d8to9_volume.cpp" />
+    <ClCompile Include="d3d8to9\d3d8types.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDraw.cpp" />
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp" />
@@ -221,7 +230,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\dplayx.dll"
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="d3d8to9\d3d8to9.hpp" />
-    <ClInclude Include="d3d8to9\d3d8types.h" />
+    <ClInclude Include="d3d8to9\d3d8types.hpp" />
     <ClInclude Include="dgame.h" />
     <ClInclude Include="dxwrapper.h" />
     <ClInclude Include="hook\MinHook.h" />
