Fix d3d8to9 issue with Haegemonia
- Fix d3d8to9 issue with Haegemonia Legions of Iron, disabled SetFVF on
DeviceCreate.
- Fix logging with d3d8to9
- Added flag for debug logging on DdrawCompat

--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClInclude Include="d3d8to9\d3d8types.hpp">
       <Filter>d3d8to9</Filter>
     </ClInclude>
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h">
+      <Filter>ddrawcompat</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="dxwrapper.rc">
