--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -233,6 +233,7 @@ copy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)Build\winspool.drv"
   <ItemGroup>
     <ClInclude Include="d3d8to9\d3d8to9.hpp" />
     <ClInclude Include="d3d8to9\d3d8types.hpp" />
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h" />
     <ClInclude Include="dgame.h" />
     <ClInclude Include="dxwrapper.h" />
     <ClInclude Include="hook\MinHook.h" />
