--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -94,134 +94,113 @@
     <ClCompile Include="wrappers\winspool.cpp">
       <Filter>wrappers</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\DDrawLog.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\DllMainCompat.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_base.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\UnmodifiedDDrawProcs.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_device.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\RealPrimarySurface.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_index_buffer.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\IReleaseNotifier.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_surface.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\DDrawProcs.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_swap_chain.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatVtable.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_texture.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatPrimarySurface.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_vertex_buffer.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdiWinProc.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8to9_volume.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdiFunctions.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdiDcCache.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdiDc.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdiCaret.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatGdi.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatDirectDrawSurface.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatDirectDrawPalette.cpp">
-      <Filter>ddrawcompat</Filter>
-    </ClCompile>
-    <ClCompile Include="DDrawCompat\v0.2.0b\CompatDirectDraw.cpp">
-      <Filter>ddrawcompat</Filter>
+    <ClCompile Include="d3d8to9\d3d8types.cpp">
+      <Filter>d3d8to9</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\DDrawLog.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\DllMainCompat.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawPalette.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\RealPrimarySurface.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\Time.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\UnmodifiedDDrawProcs.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\IReleaseNotifier.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\Hook.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\DDrawRepository.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\DDrawProcs.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatRegistry.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatPrimarySurface.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatPaletteConverter.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiWinProc.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiTitleBar.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiScrollFunctions.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiScrollBar.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiPaintHandlers.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDcFunctions.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDcCache.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiDc.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdiCaret.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatGdi.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDrawSurface.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatDirectDraw.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
     <ClCompile Include="DDrawCompat\v0.2.1\CompatActivateAppHandler.cpp">
-      <Filter>d3d8to9</Filter>
+      <Filter>ddrawcompat</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -248,8 +227,14 @@
     <ClInclude Include="hook\MinHook.h">
       <Filter>hook</Filter>
     </ClInclude>
-    <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h">
+    <ClInclude Include="d3d8to9\d3d8to9.hpp">
       <Filter>d3d8to9</Filter>
+    </ClInclude>
+    <ClInclude Include="d3d8to9\d3d8types.hpp">
+      <Filter>d3d8to9</Filter>
+    </ClInclude>
+    <ClInclude Include="DDrawCompat\v0.2.1\DDrawLog.h">
+      <Filter>ddrawcompat</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
